<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaroNetwork Mqtt</string>
    <string name="action_settings">Settings</string>
    <string name="host_title">Host</string>
    <string name="port_title">Port</string>
    <string name="pressure_title">Pressure</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrate_message">Real pressure (hPa)</string>

</resources>
