<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MQTTActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:rowCount="11"
        android:columnCount="2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:useDefaultMargins="true"
        android:rowOrderPreserved="true"
        android:columnOrderPreserved="true"
        android:alignmentMode="alignBounds">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/host_title"
            android:id="@+id/hostLabel"
            android:layout_row="0"
            android:layout_column="0"
            android:singleLine="false" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/port_title"
            android:id="@+id/portLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pressure_title"
            android:id="@+id/pressureLabel"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hostTF"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="30dp"
            android:editable="true"
            android:enabled="true"
            android:text="192.168.1.26"
            android:gravity="right" />

        <EditText
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/portTF"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="right"
            android:layout_marginRight="70dp"
            android:editable="true"
            android:enabled="true"
            android:text="1883"
            android:gravity="right" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right"
            android:singleLine="false"
            android:textOff="@string/start"
            android:textOn="@string/stop"
            android:layout_marginRight="70dp"
            android:checked="false" />

        <TextView
            android:text="0 hPa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guiText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="right" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrate"
            android:id="@+id/calibrateBtn"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_marginRight="70dp"
            android:layout_gravity="right"
            android:clickable="true" />

    </GridLayout>

</RelativeLayout>
